gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail5953s1.d
version https://git-lfs.github.com/spec/v1
oid sha256:1c04dcf631aeef64f264c6ec5e114bb2ac5d62759ccb45d36bb6e8015898b620
size 172
